--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Curso ADS</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link  href="assets/css/estilo.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto&display=swap" rel="stylesheet" rel="stylesheet">
    
 </head>
 <body>
