--- a/index.html
+++ b/index.html
@@ -12,9 +12,15 @@
   <header class = "header">
       <div class=" header__title container">
          Curso Superior de Tecnologia em <span class=" header__title--2"> Análise e Desenvolvimento de Sistemas </span> 
-
       </div>
-
+  <nav class="navbar">
+    <ul class="menu container">
+      <li class="item__menu"><a href="#">Início</a></li>
+      <li class="item__menu"><a href="#">Diciplinas</a></li>
+      <li class="item__menu"><a href="#">Professores</a></li>
+      <li class="item__menu"><a href="#">Contato</a></li>
+    </ul>
+  </nav>
   </header>
 
 
