--- a/index.html
+++ b/index.html
@@ -6,23 +6,55 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link  href="assets/css/estilo.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto&display=swap" rel="stylesheet" rel="stylesheet">
-   
-</head>
-<body>
-  <header class = "header">
-      <div class=" header__title container">
-         Curso Superior de Tecnologia em <span class=" header__title--2"> Análise e Desenvolvimento de Sistemas </span> 
-      </div>
-  <nav class="navbar">
-    <ul class="menu container">
-      <li class="item__menu"><a href="#">Início</a></li>
-      <li class="item__menu"><a href="#">Diciplinas</a></li>
-      <li class="item__menu"><a href="#">Professores</a></li>
-      <li class="item__menu"><a href="#">Contato</a></li>
-    </ul>
-  </nav>
-  </header>
+   </head>
 
+  <body>
+  <header class="header">
+    <div class="container ">
+        <div class=" header__title ">
+           Curso Superior de Tecnologia em<span class=" header__title--2">Análise e Desenvolvimento de Sistemas</span> 
+        </div>
+      </div>
+    <nav class="navbar ">
+      <ul class="menu container ">
+        <li class="item__menu"><a href="#">Início</a></li>
+        <li class="item__menu"><a href="#">Diciplinas</a></li>
+        <li class="item__menu"><a href="#">Professores</a></li>
+        <li class="item__menu"><a href="#">Contato</a></li>
+      </ul>
+    </nav>
+    </header>
+
+    <main class="main container">
+      <section class="conteudo">
+       <h1 class="title"> Perfil profissional de conclusão </h1>
+       <p> 
+         Analisa, projeta, desenvolve, testa, implanta e mantém sistemas computacionais de informação. Avalia, seleciona, especifica e utiliza metodologias, tecnologias e ferramentas da Engenharia de Software, linguagens de programação e bancos de dados. Coordena equipes de produção de softwares. Vistoria, realiza perícia, avalia, emite laudo e parecer técnico em sua área de formação
+       </p>
+
+       <h1 class="title">Campo de atuação</h1>
+        <p> Empresas de planejamento, desenvolvimento de projetos, assistência técnica e consultoria.</p>
+        <p>Empresas de tecnologia.</p>
+        <p>Empresas em geral (indústria, comércio e serviços).</p>
+        <p>Organizações não-governamentais. </p>
+        <p>Órgãos públicos.</p>
+        <p> Institutos e Centros de Pesquisa.</p>
+        <p> Instituições de Ensino, mediante formação requerida pela legislação vigente. </p>
+       
+        <h1 class="title" >Processo seletivo</h1>
+        <p> Entrada anual: </p>
+        <ul class="itens__lista">
+          <li>20 vagas através da nota do ENEM </li>
+          <li>20 vagas através da nota do Ensino Médio</li>
+        </ul>
+      </section>
+
+      <section>
+        nota/ Professores
+      </section>
+
+
+    </main>
 
 
     
